exceptions, dtos, security